# rvc_stream

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.client.test  Dockerfile.server  Dockerfile.server.full  Dockerfile.server.local  Dockerfile.server.pytorch  Dockerfile.server.test  README.md  docker-compose.host-venv.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements-admin.txt  requirements-client.txt  requirements-dev.txt  requirements-rvc.txt  requirements-server.txt  requirements.txt  setup.py  setup_env.bat  setup_env.sh  start_server_with_admin.py  ws_test.py
configs/: server.yaml
docs/: DOCKER.md
scripts/: docker-build.sh  docker-run-client.sh  docker-run-server.sh  install_torch.py
src/: __init__.py  rvc_client.py  rvc_server.py
src/admin/: __init__.py  config_manager.py  models.py  routes.py  utils.py  websocket.py
src/templates/admin/: dashboard.html
tests/: test_admin_support.py  test_client.py  test_packaging.py  test_simple.py
